WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
133493
Fix some corner cases of :hover and :active in quirks mode
https://bugs.webkit.org/show_bug.cgi?id=133493
Summary
Fix some corner cases of :hover and :active in quirks mode
Benjamin Poulain
Reported
2014-06-03 16:40:14 PDT
Fix some corner cases of :hover and :active in quirks mode
Attachments
Patch
(24.16 KB, patch)
2014-06-03 16:50 PDT
,
Benjamin Poulain
no flags
Details
Formatted Diff
Diff
Archive of layout-test-results from webkit-ews-11 for mac-mountainlion-wk2
(500.43 KB, application/zip)
2014-06-03 17:55 PDT
,
Build Bot
no flags
Details
Patch for landing
(23.30 KB, patch)
2014-06-03 23:09 PDT
,
Benjamin Poulain
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Benjamin Poulain
Comment 1
2014-06-03 16:50:45 PDT
Created
attachment 232450
[details]
Patch
Build Bot
Comment 2
2014-06-03 17:55:06 PDT
Comment on
attachment 232450
[details]
Patch
Attachment 232450
[details]
did not pass mac-wk2-ews (mac-wk2): Output:
http://webkit-queues.appspot.com/results/6196910264156160
New failing tests: media/W3C/video/src/src_reflects_attribute_not_source_elements.html
Build Bot
Comment 3
2014-06-03 17:55:08 PDT
Created
attachment 232454
[details]
Archive of layout-test-results from webkit-ews-11 for mac-mountainlion-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: webkit-ews-11 Port: mac-mountainlion-wk2 Platform: Mac OS X 10.8.5
Andreas Kling
Comment 4
2014-06-03 18:44:19 PDT
Comment on
attachment 232450
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=232450&action=review
r=me. The test failure seems totally unrelated.
> Source/WebCore/ChangeLog:17 > + This patch moves the detection quirks mode exception code from the code generator to the Fragment generator.
"detection quirks mode exception code" wut
Yusuke Suzuki
Comment 5
2014-06-03 19:26:10 PDT
Comment on
attachment 232450
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=232450&action=review
The patch looks great to me!
> Source/WebCore/cssjit/SelectorCompiler.cpp:536 > + fragment.onlyMatchesLinksInQuirksMode = false;
Is it unnecessary to check `tagName == anyQname()`?
Benjamin Poulain
Comment 6
2014-06-03 22:58:16 PDT
(In reply to
comment #5
)
> (From update of
attachment 232450
[details]
) > View in context:
https://bugs.webkit.org/attachment.cgi?id=232450&action=review
> > The patch looks great to me! > > > Source/WebCore/cssjit/SelectorCompiler.cpp:536 > > + fragment.onlyMatchesLinksInQuirksMode = false; > > Is it unnecessary to check `tagName == anyQname()`?
You are right, I'll add this check when landing.
Benjamin Poulain
Comment 7
2014-06-03 23:09:43 PDT
Created
attachment 232466
[details]
Patch for landing
Benjamin Poulain
Comment 8
2014-06-04 00:26:13 PDT
Committed
r169585
: <
http://trac.webkit.org/changeset/169585
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug